--- a/ui/src/app/components/comment/comment.component.scss
+++ b/ui/src/app/components/comment/comment.component.scss
@@ -8,7 +8,7 @@ p,
     margin-bottom: .2rem;
 }
 
-.card-block {
+.card-body {
     padding: $card-padding-top 0px $card-padding-top $card-padding-left;
 }
 
