--- a/ui/src/app/components/community-card/community-card.component.scss
+++ b/ui/src/app/components/community-card/community-card.component.scss
@@ -1,7 +1,7 @@
-.card-block-no-bottom {
+.card-body-no-bottom {
 	padding-bottom: 2px;
 }
 
-.card-block-no-top {
+.card-body-no-top {
 	padding-top: 2px;
 }
