--- a/ui/src/app/components/discussion-card/discussion-card.component.scss
+++ b/ui/src/app/components/discussion-card/discussion-card.component.scss
@@ -1,9 +1,9 @@
-.card-block-no-bottom {
+.card-body-no-bottom {
   padding-bottom: 2px;
   margin-bottom: 0px;
 }
 
-.card-block-no-top {
+.card-body-no-top {
   padding-top: 2px;
 }
 
