--- a/ui/src/app/components/onboard-alert/onboard-alert.component.html
+++ b/ui/src/app/components/onboard-alert/onboard-alert.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-block">
+  <div class="card-body">
     <div class="row">
       <div class="col-sm-11">
         <h3>Welcome to FlowChat!</h3>
@@ -11,7 +11,7 @@
     <p><a [routerLink]="['/']">FlowChat</a> is an open-source, self-hostable, <strong>live-updating</strong> discussion platform, featuring communities, discussions with threaded conversations, and voting.
     </p>
     <p>It can act as an alternative to forums, as a private team communication platform(like slack), a content creation platform(like reddit), or a voting/polling platform like
-      <a href="https://referendum.ml" target="blank_">referendum</a>.</p>
+      <a href="https://simplevote.ml" target="blank_">simplevote</a>.</p>
     <p>Flowchat tries to solve the problem of having a fluid, free-feeling group chat, while allowing for side conversations so that every comment isn’t at the top level. Multiple conversations can take place
       <strong>at once</strong>, without interrupting the flow of the chatroom.</p>
     <p>It uses <a href="http://rangevoting.org/UniqBest.html" target="blank_">range voting</a>(also known as olympic score voting) for sorting comments, discussions, and communities. Range voting is <em>more expressive</em> than simple thumbs up or thumbs down votes.</p>
