--- a/ui/src/app/components/discussion/discussion.component.html
+++ b/ui/src/app/components/discussion/discussion.component.html
@@ -23,7 +23,7 @@
   </div>
 </div>
 <nav *ngIf="!topParentId && !clearTopReply && !isReplying && !discussion?.deleted" class="navbar fixed-bottom navbar-light bg-faded">
-  <div class="row">
+  <div class="row col-sm-12">
     <app-markdown-edit class="col-sm-10 col-md-11" (textEvent)="setTopReply($event)" [rows]="1"></app-markdown-edit>
     <button (click)="sendTopReply()" class="btn btn-primary col-sm-2 col-md-1 special-nav-button" type="submit">Send</button>
   </div>
