Fix sorting. Fixes #128. Fixes #130.

--- a/ui/src/app/components/discussion-card-sort-select/discussion-card-sort-select.component.html
+++ b/ui/src/app/components/discussion-card-sort-select/discussion-card-sort-select.component.html
@@ -8,5 +8,5 @@
   <option value="time-604800">Week</option>
   <option value="time-2628000">Month</option>
   <option value="time-31540000">Year</option>
-  <option value="avg_rank__desc">All-Time</option>
+  <option value="number_of_votes__desc">All-Time</option>
 </select>
