--- a/ui/src/app/components/tag/tag.component.html
+++ b/ui/src/app/components/tag/tag.component.html
@@ -18,12 +18,19 @@
       </li>
     </ul>
   </small>
-  <div [class.card-deck-wrapper]="isCard()">
-    <div (window:scroll)="onScroll($event)" [ngClass]="{'card-deck': isCard(), 'list-group': !isCard()}">
-      <app-discussion-card [viewType]="viewType" [ngClass]="{'col-md-4': isCard()}"
-        *ngFor="let discussion of discussions" [discussion]="discussion"></app-discussion-card>
+  <div (window:scroll)="onScroll($event)">
+    <div *ngIf="!isCard()" class="list-group">
+      <app-discussion-card [viewType]="viewType" *ngFor="let discussion of discussions" [discussion]="discussion "></app-discussion-card>
     </div>
-  </div>
+    <div *ngIf="isCard()">
+      <div class="row">
+        <ngx-masonry [options]="{gutter: 10, percentPosition: true}" [useImagesLoaded]="true">
+          <ngx-masonry-item class="masonry-item" *ngFor="let discussion of discussions">
+            <app-discussion-card [viewType]="viewType" [discussion]="discussion "></app-discussion-card>
+          </ngx-masonry-item>
+        </ngx-masonry>
+      </div>
+    </div>
   <div class="row">
     <div class="col-xs-12 col-md-12">
       <i *ngIf="loadingDiscussions" class="fa fa-circle-o-notch fa-spin fa-5x fa-center"></i>
