Adding a github icon to top bar. Fixes #139.

--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -37,10 +37,13 @@
             target="_blank">About</a>
         </li>
         <li class="nav-item nav-link">
+           <a role="button" class="nav-link link-unstyled" href="https://github.com/dessalines/flowchat" tooltip="Github" placement="bottom" target="_blank"><i class="fa fa-fw fa-github"></i></a>
+         </li>
+        <li class="nav-item nav-link">
           <a role="button" class="nav-link link-unstyled"
             placement="bottom" tooltip="Donate to the developer"
             href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=2XTHDEBUNQ47U&lc=US&item_name=FlowChat&item_number=flowchat_02&amount=5%2e00&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHosted"
-            target="_blank"><small><i class="fa fa-fw fa-beer"></i></small></a>
+            target="_blank"><i class="fa fa-fw fa-beer"></i></a>
         </li>
       </ul>
       <div class="ml-auto">
