--- a/ui/src/app/components/community/community.component.html
+++ b/ui/src/app/components/community/community.component.html
@@ -16,7 +16,7 @@
       </div>
       <div *ngIf="isCard()">
         <div class="row">
-          <ngx-masonry [options]="{gutter: 10, percentPosition: true}" [useImagesLoaded]="true">
+          <ngx-masonry [options]="{gutter: 10}" [useImagesLoaded]="true">
             <ngx-masonry-item class="masonry-item" *ngFor="let discussion of discussions">
               <app-discussion-card [viewType]="viewType" [discussion]="discussion "></app-discussion-card>
             </ngx-masonry-item>
