Fixing mark and editor outline buttons.

--- a/ui/src/app/styles/extras.scss
+++ b/ui/src/app/styles/extras.scss
@@ -154,9 +154,9 @@ html [type="button"],
 .badge {
   padding: .5em .5em;
 }
-.mark {
-  background-color: #3b3b01;
-}
+// .mark {
+//   background-color: #3b3b01;
+// }
 
 .navbar.bg-dark {
   border: 0px;
