--- a/ui/src/app/components/discussion/discussion.component.html
+++ b/ui/src/app/components/discussion/discussion.component.html
@@ -25,7 +25,7 @@
 <nav *ngIf="!topParentId && !clearTopReply && !isReplying && !discussion?.deleted" class="navbar fixed-bottom navbar-light bg-faded">
   <div class="row col-sm-12">
     <app-markdown-edit class="col-sm-10 col-md-11" (textEvent)="setTopReply($event)" [rows]="1"></app-markdown-edit>
-    <button (click)="sendTopReply()" class="btn btn-primary col-sm-2 col-md-1 special-nav-button" type="submit">Send</button>
+    <button (click)="sendTopReply()" class="btn btn-outline-primary col-sm-2 col-md-1 special-nav-button" type="submit">Send</button>
   </div>
 </nav>
 <div bsModal #reconnectModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
@@ -36,7 +36,7 @@
           <span aria-hidden="true">&times;</span>
         </button>
         <p>Click to Reconnect...</p>
-        <button class="btn btn-primary" (click)="websocketReconnect()">Reconnect</button>
+        <button class="btn btn-outline-primary" (click)="websocketReconnect()">Reconnect</button>
       </div>
     </div>
   </div>
