--- a/ui/src/app/components/markdown-edit/markdown-edit.component.html
+++ b/ui/src/app/components/markdown-edit/markdown-edit.component.html
@@ -52,7 +52,7 @@
       </button>
     </div>
     <div class="btn-group" role="group" aria-label="first group">
-      <button class="btn btn-sm btn-primary" data-toggle="button"
+      <button class="btn btn-sm btn-outline-primary" data-toggle="button"
         aria-pressed="false" (click)="preview()">Preview
       </button>
     </div>
