--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -183,7 +183,7 @@
               <div class="form-group">
                 <div class="col-sm-12">
                   <button [disabled]="!signupForm.form.valid"
-                    type="submit" class="btn btn-primary btn-lg btn-block">Sign up</button>
+                    type="submit" class="btn btn-outline-primary btn-lg btn-block">Sign up</button>
                 </div>
               </div>
             </form>
@@ -224,7 +224,7 @@
               <div class="form-group">
                 <div class="col-sm-12">
                   <button [disabled]="!loginForm.form.valid"
-                    type="submit" class="btn btn-primary btn-lg btn-block">Login</button>
+                    type="submit" class="btn btn-outline-primary btn-lg btn-block">Login</button>
                 </div>
               </div>
             </form>
