--- a/ui/src/app/styles/extras.scss
+++ b/ui/src/app/styles/extras.scss
@@ -71,7 +71,7 @@ blockquote {
   clear: both;
   font-weight: 400;
   line-height: 1.42857143;
-  color: #fbfbfb;
+  // color: #fbfbfb;
   white-space: nowrap;
 }
 
